Use custom Classloader instead of pf4j, reloading works